--- a/src/styles.css
+++ b/src/styles.css
@@ -59,3 +59,11 @@ body {
   justify-content: flex-end;
   padding: 20px 20px 20px 10px;
 }
+
+.Item-click {
+  display: flex;
+  justify-content: flex-start;
+  color: darkmagenta;
+  font-style: italic;
+  font-size: small;
+}
